--- a/AppLanches/AppShell.xaml
+++ b/AppLanches/AppShell.xaml
@@ -4,12 +4,32 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:AppLanches"
+    xmlns:pages="clr-namespace:AppLanches.Pages"
     Shell.FlyoutBehavior="Disabled"
+    Shell.TabBarBackgroundColor="#a90409"
+    Shell.TabBarTitleColor="White"
+    Shell.TabBarUnselectedColor="FloralWhite"
     Title="AppLanches">
 
-    <ShellContent
+    <!--<ShellContent
         Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Route="MainPage" />-->
+
+    <TabBar>
+        <Tab Title="Home" Icon="home">
+            <ShellContent ContentTemplate="{DataTemplate pages:HomePage}"/>
+        </Tab>
+        <Tab Title="Cart" Icon="cart">
+            <ShellContent ContentTemplate="{DataTemplate pages:CartPage}"/>
+        </Tab>
+        <Tab Title="Favorites" Icon="heart">
+            <ShellContent ContentTemplate="{DataTemplate pages:FavoritesPage}"/>
+        </Tab>
+        <Tab Title="Profile" Icon="profile">
+            <ShellContent ContentTemplate="{DataTemplate pages:ProfilePage}"/>
+        </Tab>
+    </TabBar>
+    
 
 </Shell>
