--- a/AppLanches/Pages/HomePage.xaml
+++ b/AppLanches/Pages/HomePage.xaml
@@ -2,11 +2,137 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppLanches.Pages.HomePage"
-             Title="HomePage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Home Page"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="Home Page">
+
+    <Grid RowDefinitions="Auto,Auto,Auto,Auto,3*,Auto,4*"
+          RowSpacing="5"
+          Margin="15">
+
+        <VerticalStackLayout Grid.Row="0"  Spacing="3">
+            <Label x:Name="LblNomeUsuario"
+                   FontSize="Large" />
+            <Label Text="Are you hungry? How about a snack ?!"
+                   FontAttributes="Bold"
+                   TextColor="#a90409"
+                   FontSize="Subtitle" />
+        </VerticalStackLayout>
+        <Label Text="Categories"
+               Grid.Row="1"
+               TextColor="#a90409"
+               FontAttributes="Bold"
+               FontSize="Medium" />
+
+        <CollectionView Grid.Row="2"
+                        x:Name="CvCategorias"
+                        SelectionMode="Single"
+                        SelectionChanged="CvCategorias_SelectionChanged">
+
+            <CollectionView.ItemsLayout>
+                <LinearItemsLayout ItemSpacing="20"
+                                   Orientation="Horizontal" />
+            </CollectionView.ItemsLayout>
+
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <VerticalStackLayout>
+                        <Image HeightRequest="80"
+                                   WidthRequest="80"
+                                   Source="{Binding PathImage}"/>
+                        <Label HorizontalOptions="Center"
+                               FontSize="Small"
+                               Text="{Binding Name}"/>
+                    </VerticalStackLayout>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+
+        <Label Grid.Row="3"
+              Text="Most sold"
+              FontSize="Medium"
+              TextColor="#a90409"
+              FontAttributes="Bold"
+              VerticalOptions="Center" />
+
+        <CollectionView x:Name="CvMaisVendidos"
+                        Grid.Row="4"
+                        SelectionMode="Single"
+                        SelectionChanged="CvCategorias_SelectionChanged">
+
+            <CollectionView.ItemsLayout>
+                <LinearItemsLayout Orientation="Horizontal"
+                                   ItemSpacing="10" />
+            </CollectionView.ItemsLayout>
+
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Border StrokeShape="RoundRectangle 10,10,10,10">
+                        <Grid>
+                            <Image Aspect="Fill"
+                                   HeightRequest="100"
+                                   WidthRequest="100"
+                                   Source="{Binding PathImage}"/>
+
+                            <Label TextColor="White"
+                                   HorizontalTextAlignment="Center"
+                                   VerticalTextAlignment="Center"
+                                   FontSize="14"
+                                   BackgroundColor="#80000000"
+                                   Padding="5,5"
+                                   VerticalOptions="End"
+                                   HorizontalOptions="FillAndExpand"
+                                   Text="{Binding Name}"/>
+                        </Grid>
+                    </Border>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+
+        <Label Grid.Row="5"
+               Text="Most popular"
+               FontSize="Medium"
+               TextColor="#a90409"
+               FontAttributes="Bold"
+               VerticalOptions="Center" />
+
+        <CollectionView Grid.Row="6"
+                        x:Name="CvPopulares"
+                        SelectionMode="Single"
+                        SelectionChanged="CvPopulares_SelectionChanged">
+
+            <CollectionView.ItemsLayout>
+                <LinearItemsLayout Orientation="Horizontal"
+                                   ItemSpacing="10" />
+            </CollectionView.ItemsLayout>
+
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Border VerticalOptions="Start"
+                            StrokeShape="RoundRectangle 10,10,10,10"
+                            Padding="3">
+                        <Grid RowSpacing="3"
+                              RowDefinitions="Auto,Auto,Auto">
+                            <Image Aspect="AspectFill"
+                                       HeightRequest="100"
+                                       WidthRequest="100"
+                                       Source="{Binding PathImage}"/>
+                            <Label Grid.Row="1"
+                                   FontAttributes="Bold"
+                                   LineBreakMode="WordWrap"
+                                   MaxLines="2"
+                                   HorizontalTextAlignment="Center"
+                                   VerticalTextAlignment="Center"
+                                   Text="{Binding Name}"/>
+                            <Label Grid.Row="2"
+                                   FontAttributes="Bold"
+                                   HorizontalTextAlignment="Center"
+                                   VerticalTextAlignment="Center"
+                                   Text="{Binding Price,StringFormat='{0:F2} €'}" />
+                        </Grid>
+                    </Border>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+
+    </Grid>
+
 </ContentPage>
