--- a/AppLanches/Pages/ProductDetailsPage.xaml
+++ b/AppLanches/Pages/ProductDetailsPage.xaml
@@ -82,8 +82,8 @@
                 <Label.FormattedText>
                     <FormattedString>
                         <FormattedString.Spans>
-                            <Span Text="R$" FontSize="Medium"  FontAttributes="Bold"/>
                             <Span x:Name="LblProdutoPreco" FontSize="Medium"  FontAttributes="Bold"/>
+                            <Span Text=" €" FontSize="Medium"  FontAttributes="Bold"/>
                         </FormattedString.Spans>
                     </FormattedString>
                 </Label.FormattedText>
