--- a/AppLanches/Pages/CartPage.xaml
+++ b/AppLanches/Pages/CartPage.xaml
@@ -152,7 +152,7 @@
 
                 <Label Grid.Row="0"
                        Grid.Column="0"
-                       Text="Preço Total"
+                       Text="Total Price"
                        TextColor="White"
                        FontAttributes="Bold"
                        Margin="10,0,0,0" />
