Add SQLite support for managing favorite products
Added SQLite dependencies and created `FavoritesService` for CRUD operations on favorite products. Enhanced `FavoritesPage` to display favorite items using a `CollectionView`. Updated `ProductDetailsPage` to handle adding/removing favorites and updating the favorite button state. Defined `FavoriteProduct` model for storing product details and favorite status.

--- a/AppLanches/Pages/ProductDetailsPage.xaml
+++ b/AppLanches/Pages/ProductDetailsPage.xaml
@@ -26,7 +26,8 @@
                      x:Name="ImagemBtnFavorito"                      
                      Clicked="ImagemBtnFavorito_Clicked"/>
 
-        <HorizontalStackLayout Spacing="20"                               HorizontalOptions="Center"
+        <HorizontalStackLayout Spacing="20"                               
+                               HorizontalOptions="Center"
                                Margin="20"
                                Grid.Row="1">
 
